--- a/src/ClientApp/src/index.html
+++ b/src/ClientApp/src/index.html
@@ -8,6 +8,7 @@
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
+<script src="https://kit.fontawesome.com/3977a0fb79.js" crossorigin="anonymous"></script>
 <app-root></app-root>
 </body>
 </html>
